<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TimeHack</string>
    <string name="t0">0</string>
    <string name="t1">1</string>
    <string name="t2">2</string>
    <string name="t3">3</string>
    <string name="t4">4</string>
    <string name="t5">5</string>
    <string name="t6">6</string>
    <string name="t7">7</string>
    <string name="t8">8</string>
    <string name="t9">9</string>
    <string name="t10">10</string>
    <string name="t11">11</string>
    <string name="t12">12</string>
    <string name="t13">13</string>
    <string name="t14">14</string>
    <string name="t15">15</string>
    <string name="t16">16</string>
    <string name="t17">17</string>
    <string name="t18">18</string>
    <string name="t19">19</string>
    <string name="t20">20</string>
    <string name="t21">21</string>
    <string name="t22">22</string>
    <string name="t23">23</string>
    <string name="start" tools:keep="@string/start">Start</string>
    <string name="tasks">Tasks</string>
    <string name="day_calendar">Day Calendar</string>
    <string name="add_widget" tools:keep="@string/add_widget">Add widget</string>
    <string name="returnables">Returnables</string>
</resources>
