<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/full_calendar"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t8" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t11" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t13" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t17" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t18" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t19" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t20" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t21" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t22" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:background="@drawable/border_right"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="50dp"
                android:text="@string/t23" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>